# magic_tree

./: .gitignore  CMakeLists.txt  itemmodel.cpp  itemmodel.h  testcoreobject.cpp  testcoreobject.h
tree/: cacheobject.cpp  cacheobject.h  storecacheobject.cpp  storecacheobject.h  tree.cpp  tree.h  treeitem.cpp  treeitem.h
